# ros2_nav

FAST_LIO_LOCALIZATION/scripts/: global_localization.py  publish_initial_pose.py  transform_fusion.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_nav2_bringup/share/my_nav2_bringup/: package.bash  package.zsh
llm_perception/: package.xml  setup.py
llm_perception/llm_perception/: model.py  safety_navigate.py
llm_perception/llm_perception/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
llm_perception/llm_perception/log/: latest_build
log/: latest_build
my_nav2_bringup/: CMakeLists.txt  package.xml
my_nav2_bringup/launch/: complete_bringup_launch.py  turtlebot3_world_launch.py
my_nav2_bringup/maps/: dqn_stage1.pgm  dqn_stage1.yaml  world.pgm
my_nav2_bringup/params/: custom_params.yaml
my_nav2_bringup/rviz/: my_rviz_view.rviz
my_nav2_bringup/scripts/: auto_navigate.py  llm_response.py
yuki_robot_description/: CMakeLists.txt  package.xml
yuki_robot_description/config/: apriltags_36h11.yaml  camera_callibration.yaml  ekf.yaml
yuki_robot_description/launch/: apriltag_dock_pose_publisher.launch.py  debug_camera.launch.py  robot_display.launch.py  turtlebot3_world_launch.py
yuki_robot_description/rviz/: config.rviz
yuki_robot_description/src/: camera_publisher.py  detected_dock_pose_publisher.cpp
yuki_robot_description/urdf/: rgbd_camera.urdf.xacro  robot.urdf
yuki_robot_description/world/: scene.sdf  turtlebot3_dqn_stage1.world
